--- a/src/views/study.html
+++ b/src/views/study.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proffy | Sua plataforma de estudos online</title>
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/forms.css">
@@ -66,49 +67,31 @@
     </header>
 
     <main>
-      <article class="teacher-item">
-        <header>
-          <img
-            src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-            alt="Diego Fernandes">
-          <div>
-            <strong>Diego Fernandes</strong>
-            <span>Química</span>
-          </div>
-        </header>
 
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+      {% for proffy in proffys %}
+        <article class="teacher-item">
+          <header>
+            <img
+              src="{{proffy.avatar}}"
+              alt="{{proffy.name}}">
+            <div>
+              <strong>{{proffy.name}}</strong>
+              <span>{{proffy.subject}}</span>
+            </div>
+          </header>
 
-        <footer>
-          <p>Preço/hora<strong>R$ 20,00</strong>
-          </p>
-          <button type="button">
-            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-          </button>
-        </footer>
-      </article>
+          <p>{{proffy.bio}}</p>
+
+          <footer>
+            <p>Preço/hora<strong>R$ {{proffy.cost}},00</strong>
+            </p>
+            <a href="https://api.whatsapp.com/send?1=pt_br&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+              <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+            </a>
+          </footer>
+        </article>
+      {% endfor %}
       
-      <article class="teacher-item">
-        <header>
-          <img
-            src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-            alt="Diego Fernandes">
-          <div>
-            <strong>Diego Fernandes</strong>
-            <span>Química</span>
-          </div>
-        </header>
-
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
-
-        <footer>
-          <p>Preço/hora<strong>R$ 20,00</strong>
-          </p>
-          <button type="button">
-            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-          </button>
-        </footer>
-      </article>
     </main>
   </div>
 </body>
