--- a/src/views/study.html
+++ b/src/views/study.html
@@ -35,19 +35,19 @@
                   <option value="{{loop.index}}" {{ 'selected' if filters.subject == loop.index}}>
                     {{subject}}</option>
                 {% endfor %}
-                
+
               </select>
             </div>
-            
+
             <div class="select-block">
               <label for="weekday">Dia da semana</label>
               <select name="weekday" id="weekday">
                 <option value="" disabled="" hidden="">Selecione uma opção</option>
-                
+
                 {% for weekday in weekdays %}
                   <option value="{{loop.index0}}" {{ 'selected' if filters.weekday == loop.index0 }}>{{weekday}}</option>
                 {% endfor %}
-                
+
               </select>
             </div>
             <div class="input-block">
@@ -61,28 +61,34 @@
 
       <main>
 
-        {% for proffy in proffys %}
-          <article class="teacher-item">
-            <header>
-              <img src="{{proffy.avatar}}" alt="{{proffy.name}}">
-              <div>
-                <strong>{{proffy.name}}</strong>
-                <span>{{proffy.subject}}</span>
-              </div>
-            </header>
+        {% if proffys == '' %}
+          <p class="no-results">Nenhum professor encontrado com a sua pesquisa</p>
+        {% else %}
 
-            <p>{{proffy.bio}}</p>
+          {% for proffy in proffys %}
+            <article class="teacher-item">
+              <header>
+                <img src="{{proffy.avatar}}" alt="{{proffy.name}}">
+                <div>
+                  <strong>{{proffy.name}}</strong>
+                  <span>{{proffy.subject}}</span>
+                </div>
+              </header>
 
-            <footer>
-              <p>Preço/hora<strong>R$
-                  {{proffy.cost}},00</strong>
-              </p>
-              <a href="https://api.whatsapp.com/send?1=pt_br&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
-                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-              </a>
-            </footer>
-          </article>
-        {% endfor %}
+              <p>{{proffy.bio}}</p>
+
+              <footer>
+                <p>Preço/hora<strong>R$
+                    {{proffy.cost}},00</strong>
+                </p>
+                <a href="https://api.whatsapp.com/send?1=pt_br&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+                  <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                </a>
+              </footer>
+            </article>
+          {% endfor %}
+
+        {% endif %}
 
       </main>
     </div>
